# statistics_113_1_hw

./: .gitattributes  README.md
hw3/: Stat113-1_case03_bike_data.xlsx  Stat113-1_hw03_data.xlsx  hw3.ipynb  pyproject.toml
